--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     </header>
     <nav>
         <a href="#">Home</a>
-        <a href="">Curiosidades</a>
-        <a href="">Notícias</a>
-        <a href="">Fale Conosco</a>
+        <a href="#">Curiosidades</a>
+        <a href="#">Notícias</a>
+        <a href="#">Fale Conosco</a>
     </nav>
     <main>
         <article>
